[package]
name = "bevy_meshem"
version = "0.4.0"
edition = "2021"
authors = ["Adamkob12"]
description = "A crate that offers a flexible and efficient way to generate meshes from a grid of Voxels"
license = "MIT"
repository = "https://github.com/Adamkob12/bevy_meshem"
documentation = "https://docs.rs/bevy_meshem"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
rand = "0.8.5"
